# okular

./: Cargo.toml  README.md  install.sh  uninstall.sh
src/: context_menu.rs  detail_view.rs  main.rs  monitor.rs  process_actions.rs  process_list.rs  process_window.rs  window.rs
